adicionando correcoes para layout responsivo

--- a/index.html
+++ b/index.html
@@ -65,11 +65,7 @@
 
     <section id="home">
         <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="3000">
-            <ol class="carousel-indicators">
-                <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel" data-slide-to="1"></li>
-                <li data-target="#carousel" data-slide-to="2"></li>
-            </ol>
+            
             <div class="carousel-inner">
                 <div class="carousel-item active" interval="3000">
                     <img class="d-block w-100" src="imagens/comida1.jpeg">
@@ -89,7 +85,6 @@
                     <img class="d-block w-100" src="imagens/japao4.jpeg">
                     <div class="carousel-caption">
                         <h1>Ambiente decorado e acolhedor</h1>
-                        <button type="button" class="btn btn-danger" href="#contato"><a href="#contato">Venha conhecer!</a></button>
                     </div>
                 </div>
             </div>
@@ -143,17 +138,11 @@
                     <div class="comida">
                     <img class="img-fluid imagem-comida" src="imagens/comida3.jpeg" style="border-radius: 5px;">
                 </div>
-                <div class="descricao">
-                    <h2>Lorem ipsum</h2>
-                </div>
                 </div>
 
                 <div class="col-md-3 box">
                     <div class="comida">
                     <img class="img-fluid imagem-comida" src="imagens/comida4.jpeg" style="border-radius: 5px;">
-                </div>
-                <div class="descricao">
-                    <h2>Lorem ipsum</h2>
                 </div>
                 </div>
 
@@ -161,17 +150,11 @@
                     <div class="comida">
                     <img class="img-fluid imagem-comida" src="imagens/comida5.jpeg" style="border-radius: 5px;">
                 </div>
-                <div class="descricao">
-                    <h2>Lorem ipsum</h2>
-                </div>
                 </div>
 
                 <div class="col-md-3 box">
                     <div class="comida">
                     <img class="img-fluid imagem-comida" src="imagens/comida7.jpeg" style="border-radius: 5px;">
-                </div>
-                <div class="descricao">
-                    <h2>Lorem ipsum</h2>
                 </div>
                 </div>
 
@@ -179,17 +162,11 @@
                     <div class="comida">
                     <img class="img-fluid imagem-comida" src="imagens/comida8.jpeg" style="border-radius: 5px;">
                 </div>
-                <div class="descricao">
-                    <h2>Lorem ipsum</h2>
-                </div>
                 </div>
 
                 <div class="col-md-3 box">
                     <div class="comida">
                     <img class="img-fluid imagem-comida" src="imagens/comida12.jpeg" style="border-radius: 5px;">
-                </div>
-                <div class="descricao">
-                    <h2>Lorem ipsum</h2>
                 </div>
                 </div>
 
@@ -197,17 +174,11 @@
                     <div class="comida">
                     <img class="img-fluid imagem-comida" src="imagens/comida10.jpeg" style="border-radius: 5px;">
                 </div>
-                <div class="descricao">
-                    <h2>Lorem ipsum</h2>
-                </div>
                 </div>
 
                 <div class="col-md-3 box">
                     <div class="comida">
                     <img class="img-fluid imagem-comida" src="imagens/comida11.jpeg" style="border-radius: 5px;">
-                </div>
-                <div class="descricao">
-                    <h2>Lorem ipsum</h2>
                 </div>
                 </div>
             </div>
@@ -223,7 +194,7 @@
                 <h1 class="display-5">Onde nos encontrar</h1>
             </div>
             <div class="row">
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-4 contato">
                     <i class="fas fa-phone fa-lg icon"></i>
                     <span>Telefones:</span>
                     <p>(11)9999-9988 // (11)8888-7777</p>
@@ -237,12 +208,12 @@
                     <p>Restaurante Dragon</p>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <div class="col-md-4 mb-4 contato">
                     <h3>Unidade liberdade</h3>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.3209378661168!2d-46.637473585629486!3d-23.55691426731179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59a89387d6af%3A0x9a939a99b6a303bd!2sR.%20Galv%C3%A3o%20Bueno%2C%20150%20-%20Liberdade%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001506-030!5e0!3m2!1spt-BR!2sbr!4v1611264366228!5m2!1spt-BR!2sbr" width="200" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-4 mb-4 contato">
                     <h3>Unidade Paraíso</h3>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.3209378661168!2d-46.637473585629486!3d-23.55691426731179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59a89387d6af%3A0x9a939a99b6a303bd!2sR.%20Galv%C3%A3o%20Bueno%2C%20150%20-%20Liberdade%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001506-030!5e0!3m2!1spt-BR!2sbr!4v1611264366228!5m2!1spt-BR!2sbr" width="200" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
